# multimodal_inference

./: README.md  build_hand_tracking_OSC.sh  build_inference_env.sh  environment.yml  instantiate_models.py  run_hand_tracking.sh  run_inference_env.sh  setup.sh
experimental/: dpo.py  local_dpo.py
inference_env/dependencies/: spiralnet.py
inference_env/dependencies/mediapipe/: WORKSPACE  build_hands_OSC.sh  download_mediapipe_files.py  execute_hand_tracking.sh
inference_env/dependencies/mediapipe/mediapipe/examples/desktop/: BUILD  pose_app.cc  pose_app_full_body.cc  pose_app_holistic.cc
inference_env/dependencies/mediapipe/mediapipe/examples/desktop/custom_input_app/: BUILD
inference_env/dependencies/mediapipe/mediapipe/framework/formats/: BUILD
inference_env/dependencies/mediapipe/mediapipe/framework/port/: BUILD
inference_env/dependencies/mediapipe/mediapipe/graphs/hand_tracking/: BUILD
inference_env/dependencies/mediapipe/mediapipe/modules/hand_landmark/: BUILD  hand_landmark_cpu_local.pbtxt  hand_landmark_model_loader_local.pbtxt
inference_env/dependencies/mediapipe/mediapipe/modules/palm_detection/: BUILD  palm_detection_cpu_local.pbtxt  palm_detection_model_loader_local.pbtxt
inference_env/inference_cpp/: CMakeLists.txt  main.cpp
inference_env/input_interfaces/: run_hand_tracking.py
inference_env/models/: decoders.py  encoders.py
inference_env/utils/: serialize_model.py
training_env/: model.py
training_env/dependencies/RWKV-v5/src/: model.py
training_env/dependencies/rave/: pqmf.py  pqmf_jit.py
(+3 files in other folders)
